# AlgorithmTrainer

./: .gitignore  README.md  main.py  requirements.txt
core/: CMakeLists.txt
core/bindings/: pybind_wrapper.cpp
core/include/: CoreAPI.h  RatingCalculator.h  Task.h  TaskDatabase.h  TaskSelector.h  UserProfile.h
core/src/: CoreAPI.cpp  RatingCalculator.cpp  Task.cpp  TaskDatabase.cpp  TaskSelector.cpp  UserProfile.cpp
data/: tasks.json
gui/: main_window.py
